clusters/craft-usw2/default/craft-deploy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: craft-svc
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-name: "craft"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "4080"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: TCP
spec:
  selector:
    app: craft
  ports:
    - protocol: TCP
      port: 4080
      targetPort: 4080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: craft
  name: craft
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: craft
  template:
    metadata:
      name: craft
      labels:
        app: craft
    spec:
      shareProcessNamespace: true
      nodeSelector:
        karpenter.sh/provisioner-name: craft
      #terminationGracePeriodSeconds: 120
      serviceAccountName: adaptivecraft
      volumes:
      - name: secrets-store-craft
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: craft
      containers:
      - name: initdb
        volumeMounts:
        - name: secrets-store-craft
          mountPath: "/mnt/secrets"
        image: 953892292675.dkr.ecr.us-west-2.amazonaws.com/craftci:arm64py3
        imagePullPolicy: Always
        command: ["/start.sh"]
        readinessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
        livenessProbe:
            tcpSocket:
              port: 4080
            initialDelaySeconds: 5
            periodSeconds: 10
        lifecycle:
            preStop:
              exec:
                # Allow existing clients to complete within 120 seconds
                command: ["/bin/sh", "-c", "kill $(ps aux | grep server.py| grep -v grep| awk '{print $2}') && sleep 120"]
        resources:
            requests:
              cpu: 1024m
              memory: 1024Mi
